--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 </head>
 <body>
   <h1>Matthew R. Tucker</h1>
-  <p>Technical Artist · Rigging · Unreal · Maya · Bifrost</p>
+  <p><strong>Senior Technical Artist</strong></p>
+  <p>
+    A senior Technical Artist specializing in rigging and pipeline development, with experience in both AAA games and feature animation. Skilled in Unreal Engine and proprietary game engines, Python scripting, and diverse rigging techniques, delivering diverse solutions that enhance artists’ and engineers’ efficiency and creative output.
+  </p>
   <p><a href="https://vimeo.com/tuckertd" target="_blank">Vimeo Portfolio</a></p>
 </body>
 </html>
