Update border style and improve description clarity
Changed border property for clarity and updated the description text.

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      border: 0;
+      border: none; /* Changed from border: 0 to border: none for clarity */
     }
     a {
       color: #0073e6;
@@ -52,7 +52,7 @@
   <h1>Matthew R. Tucker</h1>
   <p><strong>Senior Technical Artist</strong></p>
   <p>
-    A senior Technical Artist specializing in rigging and pipeline development, with experience in both AAA games and feature animation. Skilled in Unreal Engine and proprietary game engines, Python scripting, and diverse rigging techniques, delivering diverse solutions that enhance artists’ and engineers’ efficiency and creative output.
+    A senior Technical Artist specializing in rigging and pipeline development, with experience in both AAA games and feature animation. Skilled in Unreal Engine and proprietary game engines, Python s[...]
   </p>
 
   <div class="video-container">
