--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       height: 0;
       overflow: hidden;
       max-width: 800px;
-      margin: 40px auto;
+      margin: 0px auto;
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
@@ -52,7 +52,7 @@
   <h1>Matthew R. Tucker</h1>
   <p><strong>Senior Technical Artist</strong></p>
   <p>
-    A senior Technical Artist specializing in rigging and pipeline development, with experience in both AAA games and feature animation. Skilled in Unreal Engine and proprietary game engines, Python s[...]
+    A senior Technical Artist specializing in rigging and pipeline development, with experience in both AAA games and feature animation. Skilled in Unreal Engine and proprietary game engines, Python scripting, and diverse rigging techniques, delivering diverse solutions that enhance art and engineer’s efficiency and creative output.
   </p>
 
   <div class="video-container">
