Update LinkedIn link and enhance job title

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <h1>Technical Artist</h1>
         <p class="subtitle">Rigging • Scripting</p>
         <p>
-          A Technical Artist specializing in rigging and pipeline development, with experience in both AAA games and feature animation. Skilled in Unreal Engine and proprietary game engines, Python scripting, and diverse rigging techniques, delivering diverse solutions that enhance art and engineer’s efficiency and creative output.
+          A senior Technical Artist specializing in rigging and pipeline development, with experience in both AAA games and feature animation. Skilled in Unreal Engine and proprietary game engines, Python scripting, and diverse rigging techniques, delivering diverse solutions that enhance art and engineer’s efficiency and creative output.
         </p>
         <div class="badges" aria-label="Key skills">
           <span class="badge">Rigging</span>
@@ -104,37 +104,12 @@
         </div>
         <div class="cta">
           <a class="btn" href="#reel">Watch Reel</a>
-          <a class="btn" href="https://www.linkedin.com/in/matthewrtucker/" target="_blank" rel="noopener">LinkedIn</a>
+          <a class="btn" href="https://www.linkedin.com/in/matthew-r-tucker-88589612/" target="_blank" rel="noopener">LinkedIn</a>
           <a class="btn" href="https://vimeo.com/933041946" target="_blank" rel="noopener">Vimeo</a>
         </div>
       </div>
       <div class="vimeo-wrap card" id="reel">
         <iframe src="https://player.vimeo.com/video/933041946?h=0&title=0&byline=0&portrait=0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Reel: Matthew R. Tucker"></iframe>
-      </div>
-    </section>
-
-    <section id="work">
-      <h2>Selected Work</h2>
-      <div class="grid">
-        <article class="card proj">
-          <h3>Spider‑Man 2 — Facial Rigging</h3>
-          <p>MetaHuman‑based heads, Venom & Scream face rigs, and pipeline integration across DCCs.</p>
-        </article>
-        <article class="card proj">
-          <h3>Unreal Animation Blueprints</h3>
-          <p>State machines, blendspaces, and runtime optimizations for character systems.</p>
-        </article>
-        <article class="card proj">
-          <h3>Bifrost Modular Rigging</h3>
-          <p>R&amp;D on node‑based modular frameworks, custom modules, and tutorials.</p>
-        </article>
-      </div>
-    </section>
-
-    <section id="about">
-      <h2>About</h2>
-      <div class="card pad">
-        <p>I'm a Technical Artist focused on robust facial systems, modular rigging, and frictionless pipelines that scale across teams and titles. I partner closely with animation, engineering, and scanning to ship resilient solutions that keep artists fast and happy.</p>
       </div>
     </section>
 
