Update name and title in index.html

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
   <main class="container">
     <section class="hero">
       <div class="card pad">
-        <h1>Technical Artist</h1>
-        <p class="subtitle">Rigging • Scripting</p>
+        <h1>Matthew R. Tucker</h1>
+        <p class="subtitle">Technical Artist</p>
         <p>
           A senior Technical Artist specializing in rigging and pipeline development, with experience in both AAA games and feature animation. Skilled in Unreal Engine and proprietary game engines, Python scripting, and diverse rigging techniques, delivering diverse solutions that enhance art and engineer’s efficiency and creative output.
         </p>
